[package]
name = "filetreelist"
version = "0.6.0"
authors = ["extrawurst <mail@rusticorn.com>"]
edition = "2021"
description = "filetree abstraction based on a sorted path list, supports key based navigation events, folding, scrolling and more"
homepage = "https://github.com/gitui-org/gitui"
repository = "https://github.com/gitui-org/gitui"
readme = "README.md"
license = "MIT"
categories = ["command-line-utilities"]
keywords = ["cli", "gui", "terminal", "tui", "ui"]
exclude = ["/demo.gif"]

[dependencies]
thiserror = "2.0"

[dev-dependencies]
pretty_assertions = "1.4"
